# gpnpractic

./: .gitlab-ci.yml  Chart.yaml  README.md  TODO.md  values-minikube.yaml  values-prod.yaml  values.yaml  Архив WinRAR.rar
ci/: deploy-minikube.sh  render-values.sh  values-from-env.tpl.yaml
ci/local/: docker-compose.yml
docker/: QB.Backend.Dockerfile  QB.Dotnet.Obs.Dockerfile  QB.Frontend.Dockerfile  QB.Java.Obs.Dockerfile  QB.Javascript.Obs.Dockerfile  QB.Keycloak.Dockerfile  QB.Minio.Dockerfile  QB.Minio.Migration.Dockerfile  QB.Postgres.Dockerfile  QB.Postgres.Migration.Dockerfile  QB.RabbitMQ.Dockerfile  QB.Redis.Dockerfile  QB.pgAdmin.Dockerfile
docker/certs/: sandbox_ca_root.crt
docker/config/QB.Backend/: pyproject.toml
docker/config/QB.Frontend/: base-nginx.conf  default-location-conf.template  default-ssl-server.conf
docker/config/QB.Java.Obs/: settings.xml
docker/config/QB.Keycloak/: realm-export.json
docker/yum.repos.d/: RedOS.repo
docs/: api.md  architecture.md  authentication.md  components.md  messaging.md  observability.md  quickstart.md  storage.md
k8s/: deploy.yaml  svc.yaml
src/QB.Backend/: backend.py  worker.py
src/QB.Dotnet.Obs/: Program.cs
src/QB.Java.Obs/: pom.xml
src/QB.Javascript.Obs/: package.json  server.js
templates/: 00-namespace.yaml  01-secrets.yaml  02-tls-secret.yaml  _helpers.tpl  backend.yaml  frontend.yaml  hpa-backend.yaml  hpa-frontend.yaml  keycloak.yaml  minio-migration.yaml  minio.yaml  observability.yaml  pgadmin.yaml  postgres-migration.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml
(+37 files in other folders)
